SUP-1481 Add java system property to resolve data format issue